FIx: Broken input

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,8 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+input::placeholder {
+    font-size: 14px;
+    line-height: 2;
+}
