--- a/src/App.dark-theme.css
+++ b/src/App.dark-theme.css
@@ -123,8 +123,14 @@
 
 /* DATE_TIME_PICKER CUSTOMIZATION */
 .dark-theme .datePresentor .MuiInputBase-input {
-  padding: 2px 16px;
+  padding: 2px 0px 2px 16px;
 }
+
+body[dir='rtl'] .dark-theme .datePresentor .MuiInputBase-input {
+  padding-left: unset;
+  padding-right: 16px;
+}
+
 
 .dark-theme .datePresentor .MuiIconButton-root:hover {
   background-color: unset;
@@ -144,6 +150,22 @@
 
 .dark-theme .datePresentor .MuiInputAdornment-root{
   margin: 0 8px;
+}
+
+.dark-theme .datePresentor button.MuiButtonBase-root.MuiIconButton-root{
+  padding-left: 0px;
+}
+body[dir='rtl'] .dark-theme .datePresentor button.MuiButtonBase-root.MuiIconButton-root{
+  padding-left: 16px;
+  padding-right: 0px;
+}
+
+.dark-theme .datePresentor svg.MuiSvgIcon-root{
+  font-size: 20px;
+}
+
+.dark-theme .datePresentor p.MuiFormHelperText-root.Mui-error.MuiFormHelperText-filled{
+  display: none;
 }
 
 /* DIALOG CUSTOMIZATIONS */
